<resources>
    <string name="app_name">Leistungen</string>
    <string name="action_settings">Settings</string>
    <string name="add">Leistung anlegen</string>
    <string name="stats">Statistik</string>
    <string name="no_records">Keine Leistungen</string>
    <string name="module_num">Modulnummer</string>
    <string name="module_name">Modulname</string>
    <string name="year_value">Jahr</string>
    <string name="mark">Note</string>
    <string name="creditpoints">Creditpoints</string>
    <string name="save">Speichern</string>
    <string name="drawable">"Test"</string>
    <string name="module_name_not_empty">Kein Modulname hinterlegt</string>
    <string name="module_number_not_valid">Ungültige Modulnummer</string>
    <string name="credit_points_not_empty">Keine Creditpoints hinterlegt</string>
    <string name="mark_not_empty">Keine Note hinterlegt</string>


    <string name="statistics_header">Statistik</string>
    <string name="statistics_record_count">Leistungen</string>
    <string name="statistics_halfweight_record_count">50% Leistungen</string>
    <string name="statistics_sum">Summe Crp</string>
    <string name="statistics_crp_left">Crp bis Ziel</string>
    <string name="statistics_average">Durchschnitt</string>

    <string name="credit_points_not_valid">Eingabe ungültig</string>
    <string name="hint_record_id">Modulnummer</string>
    <string name="hint_record_year">Jahr</string>
    <string name="hint_record_semester">Sommersemester</string>
    <string name="hint_record_name">Modulname</string>
    <string name="hint_record_grade">Note in %</string>
    <string name="hint_record_weighting">50% Gewichtung</string>
    <string name="hint_record_cp">Credit Points</string>
    <string name="mark_not_valid">Note ungültig</string>
    <string name="statistics_close_button">Schließen</string>
    <string name="module_picker">Modul auswählen</string>
    <string name="check_server_data" />
    <string name="refresh_modules" />
    <string name="loading_new_data" />
    <string name="loaded_new_data_success" />
</resources>


